# financial-data-warehouse

./: docker-compose.yaml  pyproject.toml
app/: test_connection.py
app/etl/: compute_returns.py  download_prices.py  load_prices.py
app/portfolio/: base.py  helper.py
app/portfolio/strategies/: denoised_mvp.py  equal_weight.py  minimum_variance.py
app/run/: single_run.py
data/raw/: aapl.csv  all_prices.csv
