[project]
name = "financial-data-warehouse"
version = "0.1.0"
description = ""
authors = [
    {name = "heisendelta",email = "ariya8.narayan7@outlook.jp"}
]
readme = "README.md"
requires-python = "<3.13,>=3.12"
dependencies = [
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "yfinance (>=1.3.0,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
